Close tab by middle mouse click
Steps to reproduce:
- open nautilus
- open a new tab, e.g. by pressing Ctrl+T
- middle-click the tab
What happens: nothing
What should happen: close the tab
Additional info: Closing tabs by middle click is a behaviour usually observed in web browsers and many editors.
Affected version: Nautilus 3.24.2 and older versions