notebook: Add middle click tab close support

It was requested for some time given that browsers do it. It's also
quite harmless.

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/47